<resources>
    <string name="app_name">Crypto Informer</string>
    <string name="title_newsfeed">Crypto News</string>
    <string name="title_crypto_prices">Cryto Prices</string>
    <string name="title_crypto_apps">Tools and Apps</string>
    <string name="currency_hint_text">Ticker Symbol</string>
    <string name="search_text">Search</string>
    <string name="interval_dropdown_label">Interval (Days)</string>
    <string name="interval_text">Interval (days)</string>

    <string name="sort_alphabetical">Sort: Alphabetical</string>
    <string name="sort_price_change_low_high">Sort: Price Increase Low to High</string>
    <string name="sort_price_change_high_low">Sort: Price increase High to Low</string>

    <string name="sort_rating_high_low">"Sort By Rating: High to Low"</string>
    <string name="sort_rating_low_high">"Sort By Rating: Low to High"</string>
    <string-array name="interval_array">
        <item>1</item>
        <item>7</item>
        <item>30</item>
    </string-array>
</resources>
