<?xml version="1.0" encoding="utf-8"?>
<!-- code reference: https://www.tutlane.com/tutorial/android/android-scrollview-horizontal-vertical-with-examples -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:fillViewport="false">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tools_and_apps_linear_layout">

    <Button
        android:id="@+id/alphabetical_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sortAppsAlphabetically"
        android:text="@string/sort_alphabetical" />

    <Button
        android:id="@+id/high_to_low_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sortAppsHighToLow"
        android:text="@string/sort_rating_high_low" />

    <Button
        android:id="@+id/low_to_high_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sortAppsLowToHigh"
        android:text="@string/sort_rating_low_high" />

    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>
</ScrollView>
